@@ -132,11 +132,14 @@ View:ImplementsModule("IconModule_CooldownSweep", 20, function(Module, icon)
 	end
 
 	Module.cooldown:SetAllPoints(IconContainer.container)
+	Module.cooldown2:SetAllPoints(IconContainer.container)
 
 	if IconContainer:IsIconSkinned(icon) then
 		Module.cooldown:SetFrameLevel(icon:GetFrameLevel() + 3)
+		Module.cooldown2:SetFrameLevel(icon:GetFrameLevel() + 3)
 	else
 		Module.cooldown:SetFrameLevel(icon:GetFrameLevel() + 2)
+		Module.cooldown2:SetFrameLevel(icon:GetFrameLevel() + 2)
 	end
 end)
 
